--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.5.1")
 
     implementation 'com.google.code.gson:gson:2.10' // for gson
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'com.google.android.libraries.places:places:2.7.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
