--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.10' // for gson
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'com.google.android.libraries.places:places:2.7.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
